# mcfreeze

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  e2e.yaml  kind.yaml
doc/: FORMAT.md  HIGHLEVEL.md  ORCHESTRATION.md  PRD-KUBERNETES-NATIVE.md  SERVICE.md  control-plane.md  format.md  high-level.md  kubernetes.md  kv-server.md  node-agent.md
doc/plan/: ASYNC_BUILDER.md  CONTROLPLANE.md  CONTROLPLANE_PHASE1.md  CONTROLPLANE_PHASE2.md  CONTROLPLANE_PHASE3.md  FORMAT_INTERFACE.md  FORMAT_V3.md  FORMAT_V4.md  FORMAT_V5_SPARSE_INDEX.md  KUBERNETES.md  MMAP_INDEX_BUILD.md  V5_COMPRESSION.md  WORKER_APB_SUPPORT.md
docker/: Dockerfile  Dockerfile.fm  Dockerfile.fmtctl  Dockerfile.runtime
go/: go.mod  go.sum
go/api/: types.go
go/api/v1alpha1/: convert.go  doc.go  groupversion_info.go  types.go  zz_generated.deepcopy.go
go/cmd/fmtctl/: controlplanecmd.go  jobcmd.go  main.go  nodeagentcmd.go
go/cmd/mcfctl/: controlplanecmd.go  jobcmd.go  main.go  nodeagentcmd.go  uicmd.go
go/cmd/node-agent/: main.go
go/internal/controller/: cron.go  cron_test.go  datasetspec.go  datasetspec_test.go  datasetversion.go  datasetversion_test.go  nodeassignment.go  nodeassignment_test.go
go/internal/controlplane/: broker.go  broker_test.go  builder.go  disk.go  disk_localpath.go  disk_localpath_test.go  fake_builder.go  fork_builder.go  fork_builder_test.go  gke_e2e_test.go  integration_test.go  job_builder.go  job_builder_kind_test.go  job_builder_test.go  kind_e2e_crd_test.go  kind_e2e_test.go  orchestrator.go  orchestrator_test.go  server.go  server_test.go  store.go  store_crd.go  store_crd_test.go  store_test.go
go/internal/controlplane/builder/: builder.go  fake.go  fork.go  fork_test.go  job.go  job_kind_test.go  job_test.go
go/internal/controlplane/volume/: localpath.go  localpath_test.go  volume.go
go/internal/mount/: fs.go  fs_test.go
go/internal/nodeagent/: agent.go  agent_integration_test.go  agent_test.go  fake.go  http.go  interfaces.go
go/internal/nodeagent/assignment/: assignment.go  fake.go  http.go
go/internal/nodeagent/mount/: fake.go  fs_test.go  mount.go  mount_linux.go  mount_stub.go
go/internal/nodeagent/ui/: decode.go  decode_test.go  handler.go  handler_test.go  memcache.go  memcache_test.go  metrics_test.go
go/internal/nodeagent/version/: fake.go  http.go  version.go
go/internal/nodeagent/volume/: fake.go  fs.go  fs_test.go  k8s.go  k8s_kind_test.go  k8s_test.go  (+1 more)
go/internal/testutil/: catalog_contract_integration_test.go  envtest.go  hotswap_integration_test.go  pipeline_integration_test.go  server.go  snapshot.go  snapshot_integration_test.go
go/internal/volume/: fake.go  fs.go  fs_test.go  k8s.go  volume.go
hack/: e2e-test.sh
hack/e2e/: build-job.yaml  kv-server.yaml  snapshot-pv.yaml  verify-job.yaml
k8s/base/: control-plane.yaml  daemonset.yaml  rbac.yaml  service.yaml
k8s/charts/frostmap/: Chart.yaml  values-kind.yaml  values.yaml
k8s/charts/mcfreeze/: Chart.yaml  values-kind.yaml  values.yaml
k8s/crds/: frostmap.dev_datasets.yaml  frostmap.dev_datasetversions.yaml
k8s/kind/: kustomization.yaml
kind/: deploy-csi-hostpath.sh
rust/: Cargo.toml
rust/crates/frostmap-bq/: Cargo.toml
rust/crates/frostmap-bq/src/: batch.rs  lib.rs  session.rs  source.rs
rust/crates/frostmap-cli/: Cargo.toml
rust/crates/frostmap-cli/src/: get.rs  load.rs  main.rs  serve.rs
rust/crates/frostmap-encode/: Cargo.toml
rust/crates/frostmap-encode/src/: adapter.rs  builder.rs  config.rs  error.rs  lib.rs
rust/crates/frostmap-format/: Cargo.toml
rust/crates/frostmap-load/: Cargo.toml
rust/crates/frostmap-loader/: Cargo.toml
rust/crates/frostmap-loader/src/: build.rs  error.rs  lib.rs  scatter.rs  source.rs  spill.rs
rust/crates/frostmap-loader/tests/: integration.rs
rust/crates/frostmap-server/: Cargo.toml
rust/crates/frostmap-server/src/: catalog.rs  error.rs  lib.rs  listener.rs  lookup.rs  metrics.rs  registry.rs
rust/crates/frostmap-server/src/modes/: catalog_mode.rs  mod.rs  snapshot_mode.rs
rust/crates/frostmap-server/src/protocol/: commands.rs  meta.rs  mod.rs
rust/crates/kv-bq/: Cargo.toml
rust/crates/kv-bq/src/: batch.rs  error.rs  session.rs  source.rs
rust/crates/kv-format/: Cargo.toml
rust/crates/kv-format/src/: data.rs  error.rs  index.rs  lib.rs  meta.rs  reader.rs  writer.rs
rust/crates/kv-load/: Cargo.toml
rust/crates/kv-load/src/: get.rs  main.rs
rust/crates/kv-loader/: Cargo.toml
rust/crates/kv-loader/src/: build.rs  error.rs  lib.rs  scatter.rs  source.rs  spill.rs
rust/crates/kv-loader/tests/: integration.rs
rust/crates/mcfreeze-bq/: Cargo.toml
rust/crates/mcfreeze-cli/: Cargo.toml
rust/crates/mcfreeze-cli/src/: get.rs  load.rs  main.rs  serve.rs
rust/crates/mcfreeze-encode/: Cargo.toml
rust/crates/mcfreeze-encode/src/: adapter.rs  builder.rs  config.rs  error.rs  lib.rs
rust/crates/mcfreeze-format/: Cargo.toml
rust/crates/mcfreeze-format/src/: builder.rs  data.rs  desc.rs  error.rs  index.rs  lib.rs  meta.rs  reader.rs  snapshot.rs  writer.rs
rust/crates/mcfreeze-format/src/v4/: builder.rs  mod.rs  reader.rs  spill.rs
rust/crates/mcfreeze-format/src/v5/: block.rs  builder.rs  compress.rs  fence.rs  meta.rs  mod.rs  reader.rs  sketch.rs
rust/crates/mcfreeze-format/tests/: conformance.rs
rust/crates/mcfreeze-loader/: Cargo.toml
rust/crates/mcfreeze-loader/src/: build.rs  error.rs  lib.rs  scatter.rs  source.rs
rust/crates/mcfreeze-loader/tests/: integration.rs
rust/crates/mcfreeze-server/: Cargo.toml
rust/crates/mcfreeze-server/src/: catalog.rs  error.rs  lib.rs  listener.rs  lookup.rs  metrics.rs  registry.rs
rust/crates/mcfreeze-server/src/modes/: catalog_mode.rs  mod.rs  snapshot_mode.rs
rust/crates/mcfreeze-server/src/protocol/: commands.rs  meta.rs  mod.rs
tf/e2e/: .terraform.tfstate.lock.info  artifact-registry.tf  bigquery.tf  gcs.tf  gke.tf  iam.tf  main.tf  outputs.tf  values-gke.yaml  variables.tf
tf/e2e/proto/: stackoverflow.desc  stackoverflow.proto
(+41 files in other folders)
