[package]
name    = "frostmap-bq"
version = "0.1.0"
edition = "2021"

[dependencies]
frostmap-loader  = { path = "../frostmap-loader", features = ["arrow"] }
thiserror  = "2"
tokio      = { version = "1", features = ["rt-multi-thread"] }
bytes      = "1"
arrow      = { version = "58", features = ["ipc", "ipc_compression"] }
gcloud-sdk = { version = "0.29", features = ["google-cloud-bigquery-storage-v1"] }
tonic      = "0.14"
