[package]
name    = "frostmap-encode"
version = "0.1.0"
edition = "2021"

[dependencies]
frostmap-loader = { path = "../frostmap-loader" }
frostmap-bq     = { path = "../frostmap-bq" }
apb-core        = { path = "../../../../../../../apb/crates/apb-core" }
arrow-array     = "58"
arrow-schema    = "58"
base64          = "0.22"
prost-reflect   = "0.14"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
thiserror       = "2"

[dev-dependencies]
tokio    = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
