[package]
name    = "frostmap-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing      = "0.1"
hdrhistogram = "7"
frostmap-format = { path = "../frostmap-format" }
bytemuck   = { version = "1", features = ["derive"] }
thiserror  = "2"
csv        = "1"
base64     = "0.22"
rayon      = "1"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
chrono     = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
rand     = "0.8"
