[package]
name    = "frostmap-server"
version = "0.1.0"
edition = "2021"

[dependencies]
frostmap-format = { path = "../frostmap-format" }
async-trait     = "0.1"
bytes           = "1"
thiserror       = "2"
tokio           = { version = "1", features = ["rt", "net", "io-util"] }
nom             = "7"
tracing         = "0.1"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
