[package]
name    = "frostmap-server"
version = "0.1.0"
edition = "2021"

[dependencies]
frostmap-format    = { path = "../frostmap-format" }
arc-swap           = "1"
async-trait        = "0.1"
axum               = "0.7"
bytes              = "1"
notify             = "6"
prometheus-client  = "0.22"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
thiserror          = "2"
tokio              = { version = "1", features = ["rt", "net", "io-util", "sync", "time"] }
nom                = "7"
tracing            = "0.1"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
