[package]
name    = "kv-bq"
version = "0.1.0"
edition = "2021"

[dependencies]
kv-loader  = { path = "../kv-loader" }
thiserror  = "2"
tokio      = { version = "1", features = ["rt-multi-thread"] }
bytes      = "1"
arrow      = { version = "54", features = ["ipc"] }
gcloud-sdk = { version = "0.29", features = ["google-cloud-bigquery-storage-v1"] }
tonic      = "0.14"
