[package]
name    = "kv-format"
version = "0.1.0"
edition = "2021"

[dependencies]
log         = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
chrono      = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
memmap2     = "0.9"
bytes       = "1"
thiserror   = "2"
bytemuck    = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
