[package]
name    = "kv-loader"
version = "0.1.0"
edition = "2021"

[features]
adbc = ["dep:arrow"]

[dependencies]
log          = "0.4"
hdrhistogram = "7"
kv-format  = { path = "../kv-format" }
bytemuck   = { version = "1", features = ["derive"] }
thiserror  = "2"
csv        = "1"
base64     = "0.22"
rayon      = "1"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
chrono     = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

arrow      = { version = "54", optional = true }

[dev-dependencies]
tempfile = "3"
rand     = "0.8"
