# SPDX-License-Identifier: Apache-2.0
[package]
name    = "mcfreeze-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcf"
path = "src/main.rs"

[dependencies]
mcfreeze-loader  = { path = "../mcfreeze-loader" }
mcfreeze-bq      = { path = "../mcfreeze-bq" }
mcfreeze-encode  = { path = "../mcfreeze-encode" }
mcfreeze-format  = { path = "../mcfreeze-format" }
mcfreeze-server  = { path = "../mcfreeze-server" }
arrow                = { version = "58", default-features = false }
clap                 = { version = "4", features = ["derive"] }
tokio                = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
anyhow               = "1"
base64               = "0.22"
prost-reflect        = { version = "0.14", features = ["serde"] }
serde_json           = "1"
rustls               = { version = "0.23", features = ["ring"], default-features = false }
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter", "json"] }
tracing-log          = "0.2"
