[package]
name    = "mcfreeze-encode"
version = "0.1.0"
edition = "2021"

[dependencies]
mcfreeze-loader = { path = "../mcfreeze-loader" }
apb-core        = { git = "https://github.com/fsaintjacques/apb", tag = "v1.1.0" }
arrow-array     = "58"
arrow-schema    = "58"
base64          = "0.22"
percent-encoding = "2"
prost-reflect   = "0.14"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
thiserror       = "2"
gcloud-sdk      = { version = "0.29", features = ["rest"] }

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt", "macros"] }
