# SPDX-License-Identifier: Apache-2.0
[package]
name    = "mcfreeze-format"
version = "0.1.0"
edition = "2021"

[dependencies]
log         = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
chrono      = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
# rayon + tracing serve only the write path (FormatBuilder); read-only
# consumers pull them in too. Deliberate: a `build` cargo feature would
# split the test matrix for ~1 crate of build-time cost. Revisit if
# reader binary size ever matters.
rayon       = "1"
tracing     = "0.1"
memmap2     = "0.9"
bytes       = "1"
thiserror   = "2"
bytemuck    = { version = "1", features = ["derive"] }
xorf = "0.12.0"

[dev-dependencies]
tempfile = "3"
