# SPDX-License-Identifier: Apache-2.0
[package]
name    = "mcfreeze-format"
version = "0.1.0"
edition = "2021"

[dependencies]
log         = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
chrono      = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
# rayon + tracing serve only the write path (FormatBuilder); read-only
# consumers pull them in too. Deliberate: a `build` cargo feature would
# split the test matrix for ~1 crate of build-time cost. Revisit if
# reader binary size ever matters.
rayon       = "1"
tracing     = "0.1"
memmap2     = "0.9"
bytes       = "1"
thiserror   = "2"
bytemuck    = { version = "1", features = ["derive"] }
xorf = "0.12.0"
# `experimental` gates the magicless-frame format (ZSTD_f_zstd1_magicless,
# libzstd's ZSTD_STATIC_LINKING_ONLY section). Safe here: the crate vendors
# and statically links its libzstd, so the API surface is pinned by Cargo.
zstd = { version = "0.13", features = ["experimental"] }

[dev-dependencies]
tempfile = "3"
