[package]
name    = "frostmap-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow-array  = "58"
arrow-csv    = "58"
arrow-schema = "58"
tracing      = "0.1"
hdrhistogram = "7"
frostmap-format = { path = "../frostmap-format" }
bytemuck   = { version = "1", features = ["derive"] }
thiserror  = "2"
rayon      = "1"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
chrono     = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
itoa       = "1"

[dev-dependencies]
tempfile = "3"
rand     = "0.8"
hex      = "0.4"
